# bakery_store_backend

./: Cargo.toml  note.md
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/middleware/: jwt_auth.rs
src/model/: bakery.rs  customers.rs  mod.rs  prelude.rs  purchase.rs  purchase_bakery.rs  users.rs
src/repository/: auth.rs  mod.rs
src/response/: auth.rs  mod.rs
src/service/: auth.rs  bakery.rs  health_check.rs  mod.rs
