[package]
name = "bakery_store_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
argon2 = "0.5.3"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
sea-orm = { version = "1.1.3", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.19.0", features = ["derive"] }

[workspace]
members = [".", "migration"]
